<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau Berbagi ilmu dengan cara yang unik? Ayo masuk dan bagikan kegiatan atau keseruanmu selama mengikuti Dicoding!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story !</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk membagikan keseruanmu?</string>
    <string name="name">Nama</string>
    <string name="detail_story">Detail Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="add_story">Upload Story</string>
    <string name="catch_camera">Tombol menangkap kamera</string>
    <string name="switch_camera">Tombol menukar kamera depan dan belakang</string>
    <string name="gambar_story">Gambar story</string>
    <string name="gambar_login">Gambar login</string>
    <string name="gambar_register">Gambar register</string>
    <string name="preview_upload_image">Preview upload gambar</string>
    <string name="gambar_welcome">Gambar Welcome</string>
    <string name="username">Nama User</string>
    <string name="Deskripsi">Deskripsi Singkat</string>
    <string name="language_setting">Language Setting</string>
    <string name="icon_exit">Exit</string>
    <string name="login_success_title">Yeahh!</string>
    <string name="login_success_message">User Login Successfully!</string>
    <string name="login_button_text">Masuk</string>
    <string name="login_failed_title">Login Failed</string>
    <string name="login_failed_message">Silakan masukkan email dan kata sandi dengan benar!</string>
    <string name="login_failed_button_text">Kembali</string>
    <string name="register_success_title">Yeahh!</string>
    <string name="register_success_message">User Created!</string>
    <string name="register_success_button_text">Lanjut</string>
    <string name="register_failed_title">Register Failed!</string>
    <string name="register_failed_message">Silakan masukkan email dan kata sandi dengan benar!</string>
    <string name="register_failed_button_text">Kembali</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba Lagi</string>
    <string name="map_icon">Icon Map</string>
    <string name="share_lokasi">Share Location</string>
</resources>